networking-policies/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apps
  name: apps
  namespace: test
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: apps
  template:
    metadata:
      labels:
        app: apps
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: nginx
