networking-policies/backend-net.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: backend-api-network
  namespace: networking 
spec: 
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Egress 
    - Ingress
  ingress: 
  - from:
    - podSelector: 
        matchLabels: 
          app: frontend    
    ports: 
    - protocol: TCP 
      port: 80
  egress:
  - to: 
    - podSelector:
       matchExpressions:
         - key: "app" 
           operator: "In"
           values: [core-py, apps-py]
    ports: 
    - protocol: TCP 
      port: 80 

  - to: 
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system 
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: TCP 
      port: 53 
    - protocol: UDP 
      port: 53
