networking-policies/frontend-net.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: frontend-ui-networking 
  namespace: networking 
spec: 
  podSelector: 
    matchLabels: 
      app: frontend 
  policyTypes: 
    - Egress 
    - Ingress
  egress: 
  - to: 
    - podSelector: 
        matchExpressions: 
        - key: app
          operator: In 
          values: [apps-py, core-py]
    ports: 
    - protocol: TCP 
      port: 80
      
  - to: 
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns    
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  ingress: 
  - from: 
    - ipBlock:
        cidr: 0.0.0.0/0
